--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -13,3 +13,4 @@ $container-padding-mobile: 20px;
 $tablet: 1024px;
 $mobile: 768px;
 $mobile-very-small: 350px;
+$anim-duration: 0.3s;
