--- a/src/styles/components/_collapse.scss
+++ b/src/styles/components/_collapse.scss
@@ -12,15 +12,15 @@
     height: 52px;
     padding: 0 20px;
     background-color: $primary-color;
-    border: none;
+    border: 2px solid $primary-color;
     cursor: pointer;
     border-radius: 5px;
-    transition: border-radius 0.3s ease;
 
-     @media (max-width: $mobile) {
+    @media (max-width: $mobile) {
         height: 30px;
         padding: 0 15px;
     }
+
   }
 
   &__title {
@@ -40,13 +40,18 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    transition: transform 0.3s ease;
+    transition: transform $anim-duration ease;
+
+    @media (max-width: $mobile) {        
+        width: 16px;
+        height: 16px;
+    }
   }
 
   &__body {
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.3s ease;
+    transition: max-height $anim-duration ease;
     background-color: $background-color;
     border-radius: 0 0 5px 5px;
   }
